--- a/languages/stack/factor/self.org
+++ b/languages/stack/factor/self.org
@@ -10,11 +10,11 @@
 
 - wiki http://progopedia.com/language/factor/
 - native compiling https://concatenative.org/wiki/view/Factor/Deployment
-- https://re.factorcode.org/
-- https://re.factorcode.org/2014/04/scraping-re-factor.html
-- https://bluishcoder.co.nz/tags/factor/index.html
-- https://bluishcoder.co.nz/2020/04/18/fun-factor-libraries.html
-- https://andreaferretti.github.io/factor-tutorial/
+- tutorial https://andreaferretti.github.io/factor-tutorial/
+- book of articles
+  https://bluishcoder.co.nz/tags/factor/index.html
+  https://bluishcoder.co.nz/factor-articles.pdf
+  https://github.com/doublec/factor-articles
 
 * language
 
